@@ -1,0 +1,16 @@
+#! /bin/sh
+
+# This checks if bogofilter/bogolexer will properly MIME decode the
+# first body line. It used to fail up to and including 1.2.0,
+# because the lexer lookahead beyond <INITIAL>\n wasn't decoded.
+
+. ${srcdir:=.}/t.frame
+
+# This message contains one body word "SPAM". Check if it's present
+# after scanning.
+cat <<_EOF | $BOGOLEXER -p -C | grep SPAM
+MIME-Version: 1.0
+Content-Transfer-Encoding: quoted-printable
+
+=53=50=41=4D
+_EOF
