@@ -15,6 +15,11 @@
 
 -------------------------------------------------------------------------------
 
+	2009-07-31
+	* Added a mimal test case for Christian Frommeyer's MIME decoding bug,
+	  Ubuntu/Launchpad Bug #320829, as expected failure (XFAIL_TESTS).
+	  https://bugs.launchpad.net/ubuntu/+source/bogofilter/+bug/320829
+
 	2009-05-28
 	* Removed two scripts that are auto-built.
 	* Added test case for Stephen Davies' Q-P EOL problem (see below).
